<resources>
    <string name="app_name">Apotik Abdi</string>
    <string name="menu_antrian">Antrian</string>
    <string name="menu_pasien">Pasien</string>
    <string name="nomor_antrian">Nomor Antrian</string>
    <string name="nama_pasien">Nama Pasien</string>
    <string name="keluhan">Keluhan</string>
    <string name="judulTambahAntrian">Tambah Antrian</string>
    <string name="pasien">Pasien</string>
    <string name="nomor_rekammedis">Nomor Rekam Medis</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="tambahdatapasien">Tambah Data Pasien</string>
    <string name="simpandatapasien">Simpan Data Pasien</string>
    <string name="hint_tanggal_lahir">Ketuk lama pada kolom tanggal lahir untuk memilih tanggal</string>
    <string name="pasien_id">1</string>
    <string name="tampilkan">Tampilkan</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="search_label">Search</string>
    <string name="search_pasien">Ketik nama pasien</string>
    <string name="pilih_pasien">Pilih Pasien</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="pilih_obat">Pilih Obat</string>
    <string name="helper_obat">Klik icon + untuk menambah obat selanjutnya</string>
    <string name="tambah_obat">Tambah Obat</string>
    <string name="hapus_obat">Hapus Obat</string>
    <string name="jumlah">Jumlah</string>
    <string name="sub_total">Sub Total</string>
    <string name="obat_1">Obat 1</string>
    <string name="obat_2">Obat 2</string>
    <string name="obat_3">Obat 3</string>
    <string name="obat_4">Obat 4</string>
    <string name="obat_5">Obat 5</string>
    <string name="total_harga">Total</string>
    <string name="helper_total_harga_obat">Ketuk lama untuk memperharui total harga obat</string>
    <string name="nomor_resep">Nomor Resep</string>
    <string name="hitung_total_harga_obat">Hitung Total Harga Obat</string>
    <string name="nama_obat">Nama Obat</string>
    <string name="jumlah_obat">2</string>
    <string name="antrian">Antrian</string>
    <string name="tanggal">Tanggal</string>
    <string name="bayar">Bayar</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="tampilkan_rekomendasi">Tampilkan Rekomendasi</string>
    <string name="terapkan_rekomendasi">Terapkan Rekomendasi</string>
    <string name="contoh_kode_obat">MOS0016</string>
    <string name="contoh_nama_obat">ALLUPURINOL 100</string>
    <string name="contoh_harga_awal">Harga Awal Per Satuan : Rp.322</string>
    <string name="contoh_harga_akhir">Harga Akhir Per Satuan : Rp.305</string>
    <string name="status_antrian">Status Antrian</string>
    <string name="detail_resep">Ketuk untuk melihat daftar obat</string>
    <string name="bayar_online">Pembayaran Online</string>
    <string name="pembayaran_tunai">Jumlah Uang Tunai</string>
    <string name="kembalian_pembayaran_tunai">Kembalian</string>
    <string name="bayar_tunai">Pembayaran Tunai</string>
    <string name="kode_pos">Kode Pos</string>
</resources>
