<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.rekomendasi.EditorRekomendasiHargaObatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_editor_rekomendasi_harga_obat"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/colorWhite" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/linear_layout_pengambilan_obat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_rekomendasi"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tampilkan_rekomendasi" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_daftar_rekomendasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:id="@+id/line"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_pengambilan_obat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/pasien_id"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/resep_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contoh_kode_obat" />

                <TextView
                    android:id="@+id/nama_pasien_pengambilan_obat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/resep_id"
                    android:text="@string/contoh_nama_obat"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nama_pasien_pengambilan_obat"
                    android:text="@string/contoh_harga_awal"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/total_biaya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tanggal"
                    android:text="@string/contoh_harga_akhir"
                    android:textSize="12sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/button_terapkan_rekomendasi"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terapkan_rekomendasi"
            android:textColor="@color/colorRed" />

    </LinearLayout>

</LinearLayout>