<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_daftar_resep"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:id="@+id/line">

        <TextView
            android:id="@+id/id_resep"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/pasien_id"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kode_obat"
            android:text="@string/nama_obat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nama_obat"
            android:layout_below="@id/kode_obat"
            android:text="@string/nama_obat"
            android:textSize="17sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/jumlah_obat"
            android:textSize="12sp"
            android:layout_below="@+id/nama_obat"
            android:text="@string/jumlah_obat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/total_harga_obat"
            android:textSize="12sp"
            android:layout_below="@+id/jumlah_obat"
            android:text="@string/total_harga"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>